# espeakng-sys

./: CHANGELOG.md  COPYRIGHT.md  Cargo.toml  LICENSE-APACHE  README.md  build.rs
headers/: encoding.h  espeak_ng.h  wrapper.h
