[package]
name = "espeakng-sys"
version = "0.2.0"
edition = "2021"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
description = "Raw FFI bindings to eSpeak NG"
license = "Apache-2.0 OR MIT"
keywords = ["FFI", "espeak-ng", "audio", "tts", "speech"]
categories = ["external-ffi-bindings", "api-bindings"]
repository = "https://github.com/Better-Player/espeakng-sys"
homepage = "https://github.com/Better-Player/espeakng-sys"
readme = "README.md"

[features]
default = []
clang-runtime = ["bindgen/runtime"]

[build-dependencies.bindgen]
version = "0.71.1"
default-features = false
